# ASINHHCCP8-Token-Project-

./: NOTES.md  README.md  pyproject.toml
.github/workflows/: public-demos-pages.yml
asin_ncea/: __init__.py  merkle.py  powp_wallet.py  receipts.py  ring_genesis.py
docs/: ASIN_NCEA_POWP_WALLET.md  CODEX_RING_GENESIS.md  CP8_OPERATOR_INTERFACE.md  INTERFERENCE_LATTICE_RESYNC.md  SOCIAL_NETWORK_OVERVIEW.md
examples/: sample_wallet_ledger.json
external_artifacts/drive/: drive_provenance_index.md
external_artifacts/drive/social_network_import_20260707/: ASIN_NCEA_V2_HHC_WALLET_POWP_EXTRACT.md  CP8_GLYPH_ENGINE_ANU28.md  DRIVE_REGISTRY.md  EVIDENCE_BOUNDARY.md  LINKEDIN_SOCIAL_NETWORK_IMAGE.manifest.json  MOLTBOOK_INTEGRATION_PLAN.md  README.md
manifests/: codex_ring_genesis_0001.json
node_network/: BUILD_SPEC.md  Dockerfile  README.md  demo_client.py  docker-compose.yml  node.py
public_demos/: README.md  index.html  manifest.json
public_demos/spiral-roadmap/: index.html
public_demos/stf1-harmonic-ring/: index.html
public_demos/stf1-pipeline-hub/: index.html
receipts/: import_receipt_20260707.json
tests/: test_ring_genesis.py
