[project]
name = "asinhhccp8-token-project"
version = "0.1.0"
description = "ASINHHCCP8 / ASIN-NCEA Ring Genesis PoWP token prototype"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
